# leptos-web-chatting

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  tailwind.config.js
app/: Cargo.toml
app/src/: layout.rs  lib.rs
app/src/auth/: login_form.rs  login_svg.rs  mod.rs
app/src/components/: dark_mode.rs  icons.rs  logo.rs  misc.rs  mod.rs  toast.rs
app/src/connection/: call.rs  mod.rs  webrtc.rs  websocket.rs
app/src/home/: layout.rs  mod.rs  navbar.rs  state.rs
app/src/home/admin/: dashboard.rs  mod.rs  qrlink.rs  qrlink_ops.rs  users.rs  users_ops.rs
app/src/home/chats/: emoji.rs  messages.rs  mod.rs  room.rs  rooms.rs
app/src/home/contacts/: adding.rs  friend.rs  friends.rs  mod.rs
app/src/home/settings/: mod.rs  profile.rs  security.rs  session.rs
common/: Cargo.toml
common/migrations/: 0001_user.down.sql  0001_user.up.sql  0002_friendship.up.sql  0003_filelink.down.sql  0003_filelink.up.sql
common/src/: auth.rs  chat.rs  datetime.rs  error.rs  extractors.rs  file.rs  friendship.rs  hub.rs  lib.rs  store.rs  user.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: fallback.rs  main.rs  state.rs
server/src/ws/: client.rs  handler.rs  mod.rs
style/: global.css
