[workspace]
resolver = "2"
members = ["app", "common", "frontend", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
leptos = { version = "0.6" }
leptos_axum = { version = "0.6" }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
server_fn = { version = "0.6", default-features = false, features = ["multipart"] }

axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "multipart", "ws", "macros"] }
axum-extra = { version = "0.9", default-features = false, features = ["cookie"] }
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
tower = { version = "0.5", default-features = false, features = ["timeout", "util"] }
tower-http = { version = "0.5", default-features = false, features = ["fs", "cors"] }
multer = { version = "3", default-features = false }
futures-util = { version = "0.3", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
redis = { version = "0.26", default-features = false, features = ["aio", "tokio-comp"] }
validator = { version = "0.18", default-features = false, features = ["derive"] }
rust-argon2 = { version = "2", default-features = false }
rand = { version = "0.8", default-features = false }
simple_logger = "5"

console_log = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

log = "0.4"
cfg-if = "1"
thiserror = "1"
serde_json = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "HtmlDocument",
  "File",
  "FileList",
  "DataTransfer",
  "RtcPeerConnection",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcRtpSender",
  "RtcOfferOptions",
  "RtcTrackEvent",
  "MediaDevices",
  "MediaStream",
  "MediaStreamTrack",
  "MediaStreamConstraints",
  "Navigator",
]

[[workspace.metadata.leptos]]
name = "chat"
bin-package = "server"
lib-package = "frontend"

assets-dir = "public"
tailwind-input-file = "style/global.css"
tailwind-config-file = "tailwind.config.js"
