[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
server_fn.workspace = true

leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
validator = { workspace = true, optional = true }

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
cfg-if.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
# log.workspace = true

[features]
hydrate = ["common/hydrate", "leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "common/ssr",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:axum-extra",
  "dep:validator",
]
