[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }

wasm-bindgen.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
