[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
app = { path = "../app", features = ["ssr"] }
common = { path = "../common", features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }

leptos_axum.workspace = true
axum.workspace = true
axum-extra.workspace = true
simple_logger.workspace = true
log.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
futures-util.workspace = true
uuid.workspace = true
serde_json.workspace = true
